Enrich java ch01-23 + laravel bulk (+25K lines)